2002-05-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/GSIMap.h:
	* Headers/gnustep/base/NSHashTable.h:
	* Headers/gnustep/base/NSMapTable.h:
	* Source/GSArray.m:
	* Source/GSSet.m:
	* Source/GSTcpPort.m:
	* Source/NSBundle.m:
	* Source/NSConnection.m:
	* Source/NSData.m:
	* Source/NSHashTable.m:
	* Source/NSMapTable.m:
	* Source/NSObject.m:
	* Source/NSRunLoop.m:
	Applied patches by James Knight, to improve memory efficiency and
	insertion.deletion speed to hash and map tables.  Also fixes for
	some GC problems.
	Fixed minor problem in patch, and added code to call functions to
	clean up after hash and map enumerations.  Modified cleanup function
	to clear enumerator ... for memory release on GC system.
	*WARNING* This introduces a binary incompatibility in that the size
	of the map table and hash table enumeration types has grown.
	If you have binaries which use the NSEnumerateHashTable() or the
	NSEnumeratemapTable() functions, you need to rebuild them.

2002-05-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/GSMime.h: Tidy up and add convenience methods.
	* Source/Additions/GSMime.m: Tidy up and add convenience methods.
	Added methods to convert content between string and data for ease
	of use from java.  Added support for most character sets handled
	by GNUstep-base.  Improved ContentID generation to be both unlikely
	to recur, and to be guaranteed unique within a process.
	* Source/NSBundle.m: ([+allBundles]) Don't enumeraste if map table
	has not been created yet.
	* Source/NSLog.m: Allow output descriptor to be changed.
	* Source/NSProcessInfo.m: Add method to change log output to go to
	another file for applications where stderr has been hijacked.

2002-05-26  Fred Kiefer <FredKiefer@gmx.de>

	* Source/Additions/GSXML.m
	Define GSXMLAttribute in the case when libxml is found. 
	Otherwise it wont compile on MS Windows.

2002-05-26  Richard Frith-Macdonald <rfm@gnu.org>
