@@ -194,6 +194,7 @@ $(GNUSTEP_OBJ_DIR)/NSUnarchiver.o \
 #
 #	Files that include GSIArray.h will need a rebuild if it is changed.
 #
+$(GNUSTEP_OBJ_DIR)/NSFileManager.o \
 $(GNUSTEP_OBJ_DIR)/NSNotificationCenter.o \
 $(GNUSTEP_OBJ_DIR)/NSPortCoder.o \
 $(GNUSTEP_OBJ_DIR)/NSRunLoop.o \
@@ -204,13 +205,17 @@ $(GNUSTEP_OBJ_DIR)/NSUnarchiver.o \
 #
 #	Files that include GSIMap.h will need a rebuild if it is changed.
 #
+$(GNUSTEP_OBJ_DIR)/GSAttributedString.o \
 $(GNUSTEP_OBJ_DIR)/GSCountedSet.o \
+$(GNUSTEP_OBJ_DIR)/GSDictionary.o \
+$(GNUSTEP_OBJ_DIR)/GSFFCallInvocation.o \
 $(GNUSTEP_OBJ_DIR)/GSSet.o \
 $(GNUSTEP_OBJ_DIR)/NSArchiver.o \
 $(GNUSTEP_OBJ_DIR)/NSConnection.o \
-$(GNUSTEP_OBJ_DIR)/NSGAttributedString.o \
-$(GNUSTEP_OBJ_DIR)/NSGDictionary.o \
+$(GNUSTEP_OBJ_DIR)/NSHashTable.o \
+$(GNUSTEP_OBJ_DIR)/NSMapTable.o \
 $(GNUSTEP_OBJ_DIR)/NSNotificationCenter.o \
+$(GNUSTEP_OBJ_DIR)/NSObject.o \
 $(GNUSTEP_OBJ_DIR)/NSPortCoder.o \
 $(GNUSTEP_OBJ_DIR)/NSSerializer.o \
 	: $(HEADER_DIR)/GSIMap.h $(HEADER_DIR)/GSUnion.h
